<resources>
    <string name="hello">Hello World, HelloActivity!</string>
    <string name="app_name">My Application</string>

    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="age">Age :</string>
    <string name="domaine_de_comptance">Domaine de compétance :</string>
    <string name="téléphone">Téléphone :</string>
    <string name="validateButton">Valider</string>
    <string name="backButton">Retour</string>
    <string name="insérez_votre_nom">Insérez votre nom</string>
    <string name="insérez_votre_prénom">Insérez votre Prénom</string>
    <string name="insérez_votre_age">Insérez votre age</string>
    <string name="insérez_votre_domaine_de_compétance">Insérez votre Domaine de compétance</string>
    <string name="insérez_votre_numéro_de_téléphone">Insérez votre numéro de téléphone</string>
    <string name="confirmationUserInfoMsg">Ces informations sont-elles correcte ?</string>

    <string name="welcomeMsg">Bienvenue !</string>
    <string name="clickMe">Clique moi !</string>
    <string name="backMain">Retour au début !</string>
</resources>